Bug 342593 - During address completion, cannot exclude 'recent addresses'
Summary: During address completion, cannot exclude 'recent addresses'
Status: RESOLVED FIXED
Alias: None
Product: kmail2
Classification: Applications
Component: composer (other bugs)
Version First Reported In: 4.12.5
Platform: Mageia RPMs Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2015-01-07 17:44 UTC by Maurice Batey
Modified: 2015-01-08 21:38 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 14.12.1
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Maurice Batey 2015-01-07 17:44:23 UTC
During 'To:' address completion in Composer, addresses mined from the 'To:'  fields of existing emails are listed, even though the option  "Settings/Configure Kmail/Composer/Use recent addresses for autocompletion" is Disabled (unchecked).

This is simply wrong!



Reproducible: Always

Steps to Reproduce:
1. In   , disable it.
2. When Composing a new email, start to enter a name.
3. Addresses satisfying that entry are offered, despite (1) above.

Actual Results:  
Addresses satisfying that entry are offered, during Address Completion

Expected Results:  
No 'recent addresses' should appear, unless also in Contacts.

The option in "Settings/Configure Kmail/Composer/Edit recent addresses" seems to have no association with the addresses being offered during autocompletion.

Source RPM :  kdepim4-4.12.5-1.mga4.src.rpm
Comment 1 Laurent Montel 2015-01-08 06:28:15 UTC
Are you sure that it's not address from baloo ?
Comment 2 Maurice Batey 2015-01-08 11:42:11 UTC
It may well be from Baloo, but if so why does Baloo not honour the "Settings/Configure Kmail/Composer/Use recent addresses for autocompletion" = Disabled (i.e. unchecked) setting?
Comment 3 Laurent Montel 2015-01-08 12:14:53 UTC
Because it's not "recent address" :)
it's address from all your mails
Comment 4 Maurice Batey 2015-01-08 13:09:51 UTC
But  'addresses from my mails' are not wanted, especially when it's pulling them in from the To:  lists of *Incoming* mails, some of which are LONG and contain invalid or obsolete addresses. :-)

 Those are not 'recent' addresses, i.e. addresses that *I* have used recently when Sending, and it is polluting the otherwise excellent 'address completion' function.

How does one tell Baloo to desist from trawling through incoming mail for 'completion' addresses?
Comment 5 Laurent Montel 2015-01-08 21:38:14 UTC
Git commit 7e38acacef86d95d5e81518b23d20e392ca9a23e by Montel Laurent.
Committed on 08/01/2015 at 21:37.
Pushed by mlaurent into branch 'KDE/4.14'.

Fix Bug 342593 - During address completion, cannot exclude 'recent addresses'

FIXED-IN: 14.12.1

M  +15   -1    kmail/configuredialog/configurecomposerpage.cpp
M  +1    -0    kmail/configuredialog/configurecomposerpage.h
M  +5    -2    libkdepim/addressline/addresseelineedit.cpp
M  +3    -0    libkdepim/addressline/addresseelineedit.h
M  +1    -2    messagecomposer/composer/composerlineedit.cpp
M  +6    -0    messagecomposer/settings/messagecomposer.kcfg.cmake

http://commits.kde.org/kdepim/7e38acacef86d95d5e81518b23d20e392ca9a23e