Fix Bug 342593 - During address completion, cannot exclude 'recent addresses'

FIXED-IN: 14.12.1
BUG: 342593