configuredialog/configurecomposerpage.h
@@ -64,6 +64,7 @@ private:
     void doResetToDefaultsOther();
 
 private:
+    QCheckBox     *mShowBalooSearchAddressesInComposer;
     QCheckBox     *mAutoAppSignFileCheck;
     QCheckBox     *mTopQuoteCheck;
     QCheckBox     *mDashDashCheck;
