libkdepim/addressline/addresseelineedit.cpp
@@ -336,8 +336,6 @@ void AddresseeLineEdit::Private::init()
 
         KConfigGroup group( KGlobal::config(), "AddressLineEdit" );
         m_showOU = group.readEntry( "ShowOU", false );
-        m_enableBalooSearch = group.readEntry( "EnabledBalooSearch", true );
-
     }
 }
 
@@ -1038,6 +1036,11 @@ void AddresseeLineEdit::setFont( const QFont &font )
     if ( d->m_useCompletion ) {
         completionBox()->setFont( font );
     }
+}
+
+void AddresseeLineEdit::setEnableBalooSearch(bool enable)
+{
+    d->m_enableBalooSearch = enable;
 }
 
 void AddresseeLineEdit::allowSemicolonAsSeparator( bool useSemicolonAsSeparator )
